update knowledge